Fixed dependencies - lodash

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "touching-vue",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.2",
     "vue": "^2.0.7"
   }
 }
